Fix grid problem. align to right next. Move on to making the tick a button

--- a/public/index.css
+++ b/public/index.css
@@ -1,22 +1,23 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto 1fr;
   justify-content: space-between;
   min-width: 70%;
-  max-height: 87%;
-  margin-top: 100px;
-  align-content: stretch;
+  max-height: 90%;
+  margin-top: 50px;
   font-size: large;
   font-family: "Libre Baskerville", serif;
+  align-content: stretch;
 }
 
 .searchbar{
-  grid-column: 1/3;
-  grid-row: 1;
+  grid-column: 1/-1;
   margin: 10px;
   padding: 5px 0px 5px 0px;
   text-align: center;
+  height: 25px;
+  max-height: 25px;
 }
 
 .searchbar input[name="search"]:focus{
@@ -38,7 +39,18 @@ body{
   margin: 0;
 }
 
+.logout{
+  grid-row: 1;
+  grid-column: 1/-1;  
+  padding: 5px;
+  margin: 10px;
+  display: flex;
+  justify-content: right;
+  max-width: fit-content;
+}
+
 .cards{
+  grid-row: 3;
   display: flex;
   flex-direction: column;
   margin: 10px;
@@ -46,8 +58,6 @@ body{
   padding: 5px;
   text-align: center;
   font-weight: 500;
-  grid-row: 2;
-  flex-grow: 1;
   overflow-y: auto;
 }
 
@@ -91,3 +101,6 @@ button:hover{
   border: 3px solid rgb(92, 148, 203);
   border-radius: 5px;
 }
+
+
+
